--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -52,7 +52,11 @@
 
                                         </p>
                                         <p class="date-comments">
-                                            <a href="{{ .Permalink }}"><i class="fa fa-calendar-o"></i> {{ .Date.Format .Site.Params.date_format }}</a>
+                                            <a href="{{ .Permalink }}"><i class="fa fa-calendar-o"></i>
+                                                <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
+                                                    {{ .Date.Day }} {{ index $.Site.Data.mois (printf "%d" .Date.Month) }} {{ .Date.Year }}
+                                                </time>
+                                            </a>
                                         </p>
                                     </div>
                                     <p class="intro">{{ .Summary }}</p>
