--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,10 +3,11 @@
 
         {{ if isset .Site.Params "about_us" }}
         <div class="col-md-4 col-sm-6">
-            <h4>{{ i18n "aboutUs" }}</h4>
-
-            {{ .Site.Params.about_us | markdownify }}
-
+            <h1>Suivez-nous</h1>
+            <br/>
+            {{ range .Site.Menus.topbar.ByWeight }}
+                <a href="{{ .URL }}" target="_blank" style="opacity: 1;">{{ .Pre }}</a>
+            {{ end }}
             <hr class="hidden-md hidden-lg hidden-sm">
 
         </div>
@@ -16,7 +17,7 @@
         <div class="col-md-4 col-sm-6">
 
             {{ if isset .Site.Params "recent_posts" }} {{ if .Site.Params.recent_posts.enable }}
-            <h4>{{ i18n "recentPosts" }}</h4>
+            <h3>{{ i18n "recentPosts" }}</h3>
 
             <div class="blog-entries">
                 {{ range first 3 (where .Site.Pages "Type" "blog") }}
@@ -46,7 +47,7 @@
         {{ if isset .Site.Params "address" }}
         <div class="col-md-4 col-sm-6">
 
-          <h4>{{ i18n "contactTitle" }}</h4>
+          <h3>{{ i18n "contactTitle" }}</h3>
 
             {{ .Site.Params.address | markdownify }}
 
@@ -80,6 +81,7 @@ _________________________________________________________ -->
               <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) -->
 
               {{ i18n "portedBy" }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>
+              {{ i18n "andEditedBy" }} <a href="https://github.com/palindromordnilap/">palindromordnilap</a>
             </p>
         </div>
     </div>
