--- a/layouts/partials/see_more.html
+++ b/layouts/partials/see_more.html
@@ -8,7 +8,9 @@
                 <div class="icon icon-lg"><i class="{{ .Site.Params.see_more.icon }}"></i>
                 </div>
                 <h3 class="text-uppercase">{{ .Site.Params.see_more.title }}</h3>
-                <p class="lead">{{ .Site.Params.see_more.subtitle }}</p>
+                {{ range .Site.Params.see_more.subtitle }}
+                    <p class="lead">{{ .content }}</p>
+                {{ end }}
                 <p class="text-center">
                     <a href="{{ .Site.Params.see_more.link_url }}" class="btn btn-template-transparent-black btn-lg">{{ .Site.Params.see_more.link_text }}</a>
                 </p>
