--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,6 +32,8 @@
 
                         <div id="post-content">
                           {{ .Content }}
+                          <br>
+                          <img src="{{ .Site.BaseURL}}{{ .Params.banner }}" class="img-responsive" alt="">
                         </div>
                         <!-- /#post-content -->
                         {{ if .Site.DisqusShortname }}
