--- a/layouts/partials/recent_posts.html
+++ b/layouts/partials/recent_posts.html
@@ -42,7 +42,10 @@
                             {{ with .Params.author }}
                             {{ i18n "authorBy" }} <a href="#">{{ . }}</a>
                             {{ end }}
-                            {{ i18n "publishedOn" }} {{ .Date.Format .Site.Params.date_format }}
+                            {{ i18n "publishedOn" }}
+                            <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
+                                {{ .Date.Day }} {{ index $.Site.Data.mois (printf "%d" .Date.Month) }} {{ .Date.Year }}
+                            </time>
                             </p>
                             <p class="intro">{{ .Summary }}</p>
                             <p class="read-more">
