Move all scripts to head

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -64,4 +64,7 @@
   <meta property="og:url" content="{{ .URL }}/" />
   <meta property="og:image" content="{{ .Site.Params.logo }}" />
 
+  <!-- Scripts -->
+  {{ partial "scripts.html" . }}
+
 </head>
