--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -30,9 +30,9 @@
                                   <div class="image">
                                       <a href="{{ .Permalink }}">
                                           {{ if .Params.banner }}
-                                          <img src="{{ .Site.BaseURL}}{{ .Params.banner }}" class="img-responsive" alt="">
+                                          <img src="{{ .Site.BaseURL}}/{{ .Params.banner }}" class="img-responsive" alt="">
                                           {{ else }}
-                                          <img src="{{ .Site.BaseURL}}img/placeholder.png" class="img-responsive" alt="">
+                                          <img src="{{ .Site.BaseURL}}/img/placeholder.png" class="img-responsive" alt="">
                                           {{ end }}
                                       </a>
                                   </div>
@@ -46,7 +46,7 @@
                                           {{ end }}
                                           {{ if isset .Params "categories" }}
                                           {{ if gt (len .Params.categories) 0 }}
-                                          {{ i18n "in" }} <a href="{{ $.Site.BaseURL }}categories/{{ index .Params.categories 0 | urlize | lower }}">{{ index .Params.categories 0 }}</a>
+                                          {{ i18n "in" }} <a href="{{ $.Site.BaseURL }}/categories/{{ index .Params.categories 0 | urlize | lower }}">{{ index .Params.categories 0 }}</a>
                                           {{ end }}
                                           {{ end }}
 
