--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,7 +33,7 @@
                         <div id="post-content">
                           {{ .Content }}
                           <br>
-                          <img src="{{ .Site.BaseURL}}{{ .Params.banner }}" class="img-responsive" alt="">
+                          <img src="{{ .Site.BaseURL}}/{{ .Params.banner }}" class="img-responsive" alt="">
                         </div>
                         <!-- /#post-content -->
                         {{ if .Site.DisqusShortname }}
