--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,8 +32,10 @@
 
                         <div id="post-content">
                           {{ .Content }}
-                          <br>
-                          <img src="{{ .Site.BaseURL}}/{{ .Params.banner }}" class="img-responsive" alt="">
+                          {{ if and .Params.banner .Params.showBanner }}
+                            <br>
+                            <img src="{{ .Site.BaseURL}}/{{ .Params.banner }}" class="img-responsive" alt="">
+                          {{ end }}
                         </div>
                         <!-- /#post-content -->
                         {{ if .Site.DisqusShortname }}
